equal mounting the gui and api endpoint to a unified app
